# pytorch_pca

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.dev.txt
.github/workflows/: publish.yml
pytorch_pca/: _version.py  methods.py  nl_pca_net.py  pca.py  pca_result.py  utils.py
pytorch_pca/methods/: __init__.py  bpca.py  nipals.py  ppca.py  rnipals.py  rpca.py  svd.py  svd_impute.py
pytorch_pca/methods/nlpca/: __init__.py  nlpca.py  nlpca_utils.py
tests/: pytest.ini  test_all.py
torch_pca/: __init__.py
